fix: header z-index

--- a/components/layout/header/header.module.scss
+++ b/components/layout/header/header.module.scss
@@ -9,7 +9,7 @@
   width: 100%;
   background-color: var(--white);
   border-bottom: 1px solid rgb(0, 0, 0, 0.25);
-  z-index: 2;
+  z-index: 1;
   top: 0;
 
   box-shadow: 0 2px 3px rgb(0, 0, 0, 0.05);
